
buildscript {
    repositories {
        gradlePluginPortal()
    }
    dependencies {
        classpath 'com.bmuschko:gradle-docker-plugin:5.0.0'
    }
}

plugins {
    id 'com.bmuschko.docker-spring-boot-application' version '5.0.0'
    id 'org.springframework.boot' version '2.1.7.RELEASE'
    id 'io.spring.dependency-management' version '1.0.8.RELEASE'
    id 'java'
}

group = 'edu.ignite'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '12'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

ext {
    //https://stackoverflow.com/questions/52652162/ignite-wont-start-with-spring-boot-2-0-5-h2-property-nested-joins-doesnt-exi
    //https://blog.csdn.net/weixin_39139044/article/details/94138948
    set('h2.version', '1.4.197')
}

bootRun {
    jvmArgs = ["-Xms512m",
               "-Xmx512m",
               "-Djava.net.preferIPv4Stack=true",
               "-Djdk.tls.client.protocols=TLSv1.2",
               "--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED",
               "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED",
               "--add-exports=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED",
               "--add-exports=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED",
               "--add-exports=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED",
               "--illegal-access=permit"
    ]
}

//docker {
//    springBootApplication {
//        baseImage = 'openjdk:12-alpine'
//        ports = [9001, 8080, 47500, 10800]
//        tag = 'edu.ignite.computinf:0.0.1-SNAPSHOT'
////        jvmArgs = ['-Dspring.profiles.active=production', '-Xmx2048m']
//    }
//}

//task fatJar(type: Jar) {
//    manifest {
//        attributes 'Main-Class': 'edu.ignite.computing.client.IgniteComputingApplication'
//    }
//    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
//    with jar
//}

dependencies {
    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-csv:2.9.9'
    implementation 'org.apache.ignite:ignite-spring-data:2.7.5'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
}
